# Pollenomics

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
docs/: bee_pathfinding_v2_design.md
include/: app.h  bee.h  hex.h  params.h  platform.h  render.h  render_hex.h  sim.h  tile_core.h  tile_gen.h  tile_types.h  ui.h
include/path/: path.h  path_cost.h  path_debug.h  path_fields.h  path_scheduler.h
include/util/: log.h
include/world/tiles/: tile_flower.h
src/: main.c
src/app/: app.c
src/config/: params.c
src/path/: path_core.c  path_cost.c  path_debug.c  path_fields.c  path_internal.h  path_scheduler.c
src/platform/: sdl_io.c
src/render/: gl_backend.c  hex_draw.c  hex_draw.h
src/sim/: bee.c  bee_path.c  bee_path.h  hive.c  hive.h  plants.c  plants.h  sim.c  sim_internal.h
src/ui/: ui.c
src/util/: log.c
src/world/: hex_world.c
src/world/tiles/: tile_core.c
src/world/tiles/flower/: tile_flower.c
